--- a/manifest.json
+++ b/manifest.json
@@ -13,13 +13,14 @@
   },
   "options_page": "options.html",
   "permissions": [
-    "geolocation"
+    "geolocation",
+    "storage"
   ],
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+K",
-        "mac": "Command+Shift+K"
+        "default": "Ctrl+T",
+        "mac": "Command+T"
       }
     }
   },
