fix: 修改默认快捷键为Ctrl+E/Command+E
更新manifest.json、README.md和options.html中的默认快捷键设置，避免与系统快捷键冲突

--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+T",
-        "mac": "Command+T"
+        "default": "Ctrl+E",
+        "mac": "Command+E"
       }
     }
   },
