--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+E",
-        "mac": "Command+E"
+        "default": "Ctrl+Shift+E",
+        "mac": "Command+Shift+E"
       }
     }
   },
