--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
   "manifest_version": 3,
-  "name": "桌面时钟插件",
+  "name": "Vitality Clock",
   "version": "1.0.0",
-  "description": "一个模拟桌面电子时钟的 Chrome 插件，包含多种表盘风格、日期显示和天气信息",
+  "description": "A desktop digital clock Chrome extension with multiple dial styles, date display, and weather information",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon.svg",
-      "48": "icons/icon.svg",
-      "128": "icons/icon.svg"
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
   },
   "options_page": "options.html",
   "permissions": [
-    "geolocation",
     "storage"
   ],
   "commands": {
@@ -25,8 +25,9 @@
     }
   },
   "icons": {
-    "16": "icons/icon.svg",
-    "48": "icons/icon.svg",
-    "128": "icons/icon.svg"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
